# Affine_IO

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build_gcc.bat
.github/workflows/: build.yml  ci.yml  release.yml
aimeio/: aimeio.def
aimeio/include/: aimeio.h
aimeio/src/: aimeio.c
chuniio/: chuniio.def
chuniio/include/: chuniio.h
chuniio/src/: chuniio.c
common/include/: affine_serial.h  dprintf.h  serial.h
common/src/: affine_serial.c  dprintf.c  serial_win.c
crates/affine-aime/: Cargo.toml
crates/affine-aime/src/: lib.rs
crates/affine-chuni/: Cargo.toml
crates/affine-chuni/src/: lib.rs
crates/affine-core/: Cargo.toml  build.rs
crates/affine-core/src/: lib.rs  serial.rs  shared_memory.rs  slider.rs  types.rs  util.rs
crates/affine-mai2/: Cargo.toml
crates/affine-mai2/src/: lib.rs
crates/affine-mercury/: Cargo.toml
crates/affine-mercury/src/: lib.rs
examples/: e2e_latency_bench.rs  mai2_hardware_probe.rs
mai2io/: mai2io.def
mai2io/include/: affine_io.h  mai2io.h
mai2io/src/: affine_io.c  mai2io.c
mercuryio/: mercuryio.def
mercuryio/include/: mercuryio.h
mercuryio/src/: mercuryio.c
src/: aime.rs  exports.rs  lib.rs  mai2.rs  serial.rs  slider.rs  types.rs  util.rs
src/exports/: aime.rs  chuni.rs  mai2.rs  mercury.rs  mod.rs
