[workspace]
members = [
    ".",
    "crates/affine-core",
    "crates/affine-aime",
    "crates/affine-mai2",
    "crates/affine-chuni",
    "crates/affine-mercury",
]
resolver = "2"

[workspace.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Devices_Communication",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Environment",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Performance",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }

[package]
name = "affine-io"
version = "0.1.0"
edition = "2024"

[lib]
name = "affine_io"
crate-type = ["cdylib"]

[features]
latency-bench = [
    "affine-chuni/latency-bench",
    "affine-mai2/latency-bench",
    "affine-mercury/latency-bench",
]

[dependencies]
affine-core = { path = "crates/affine-core" }
affine-aime = { path = "crates/affine-aime" }
affine-mai2 = { path = "crates/affine-mai2" }
affine-chuni = { path = "crates/affine-chuni" }
affine-mercury = { path = "crates/affine-mercury" }

[dev-dependencies]
windows-sys = { workspace = true }
